--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,86 @@
+/*
+ * General Styles for the Document
+ */
+
 body {
     text-align: center;
-    font:3em 'Bangers', cursive;
+    font: 3em 'Bangers', cursive;
+    margin: 0;
+    height: 100%;
+    overflow: hidden
+}
+
+html {
+    margin: 0;
+    height: 100%;
+    overflow: hidden
 }
 
 .container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .box {
-	width: 100%;
+    width: 100%;
 }
 
 .game {
-	width: 50%;
-}
-
-.charlist {
-	width: 10%;
-	padding-top: 10px;
-}
-
-.chars {
-	width:50px;
-	height: auto;
-}
-
-.header {
-	width: 100%;
-	font:1em 'Bangers', cursive;
-	color: #1e90ff;
-	-webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: black;
-	padding-left: 30px;
-}
-
-h1 {
-	margin: 0 0 20px 0;
+    width: 50%;
 }
 
 #canvas {
-	width: 100%;
-	height: auto;
+    width: 100%;
+    height: auto;
+}
+
+
+/*
+ * Character List Settings
+ */
+
+.charlist {
+    width: 10%;
+    padding-top: 10px;
+}
+
+.chars {
+    width: 50px;
+    height: auto;
+    cursor: pointer;
+}
+
+
+/*
+ * Header and Scoreboard Style
+ */
+
+.header {
+    width: 100%;
+    font: 1em 'Bangers', cursive;
+    color: #1e90ff;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: black;
+    padding-left: 30px;
+}
+
+h1 {
+    margin: 0 0 20px 0;
 }
 
 .scores {
-	font:0.3em 'Press Start 2P', cursive;
+    font: 0.3em 'Press Start 2P', cursive;
 }
 
-.scores span {
-	padding-left: 80px;
+#level {
+    padding-left: 80px;
+    width: 10%;
+}
+
+#lives {
+    padding-left: 80px;
+    width: 10%;
 }
 
 
@@ -71,7 +101,7 @@ h1 {
 
 .modal-content {
     background: #1e90ff;
-    margin:15% auto;
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
@@ -95,7 +125,7 @@ h1 {
     }
 }
 
-.results {
+#results {
     font-size: 0.6em;
     text-align: center;
 }
@@ -115,6 +145,7 @@ h1 {
     cursor: pointer;
 }
 
+
 /*
  * Styles for the losing modal
  */
@@ -131,14 +162,18 @@ h1 {
 }
 
 
-@media screen and (min-width: 907px) {
-	.container{
-		width: 790px;
-		margin-left: auto;
-		margin-right: auto;
-	}
+/*
+ * Media for mainting canvas size
+ */
 
-	.modal-content {
-		width: 784px;
-	}
+@media screen and (min-width: 787px) {
+    .container {
+        width: 790px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .modal-content {
+        width: 784px;
+    }
 }
