--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ body {
     font: 3em 'Bangers', cursive;
     margin: 0;
     height: 100%;
-    overflow: hidden
+    overflow: hidden;
+    background-color: #a4e6f6;
 }
 
 html {
